added missing me route for requesting the current user
